attempt to fix logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,9 @@ body {
 #sidenav-overlay {
   left: 300;
 }
+
+@media screen and (min-width: 992px) {
+  .brand-logo {
+    margin-left: 20px;
+  }
+}
